tests/cases/attributes/errors/attribute-derive-default-enum-missing-case.ari
@derive(Default(Missing))
enum State {
  Ready,
}

fn main() -> i64 {
  return 0;
}
